foundation-5.5.2/css/portfolio-theme.css
body {
	font-weight: 400;
	background-color: rgba(0, 0, 0, 0.02);
}

.button-group li{
	padding-top: 3%;
}

.button-group a{
	color: rgba(0, 0, 0, 1);
	background-color: transparent;
}

.button-group a:hover {
	color: rgba(0, 0, 0, 0.4);
	background-color: transparent;
}

.button-group{
	float: none;
}

@media only screen and (min-width: 40.063em) {
	.button-group{
		float: right;
	}
}

.namelogo {
	padding: 20px 10px 0px 10px;
}

@media only screen and (min-width: 40.063em) {
	.namelogo {
		padding-bottom: 20px;
	}
}

.namelogo h1 {
	font-size: 1.5em;
	font-weight: 600;
	text-align: center;
}

@media only screen and (min-width: 40.063em) {
	.namelogo h1 {
		font-size: 16px;
		text-align: left;
	}
}

@media only screen and (min-width: 64.063em) {
	.namelogo h1 {
		font-size: 24px;
		text-align: left;
	}
}

.hero{
	background: url("../../images/landing-background.jpg");
	background-size: cover;
	box-shadow: inset 0px 0px 0 2000px rgba(0,0,0,0.15);
	height: 80%;
}

.intro-text {
	padding-top: 40%;
	color: rgba(255, 255, 255, 1);
	text-align: center;
}

@media only screen and (min-width: 40.063em) {
	.intro-text{
		padding-top: 25%;
	}
}

@media only screen and (min-width: 64.063em) {
	.intro-text{
		padding-top: 18%;
	}
}

.about, .work, .contact {
	padding: 50px 0 0 0;
}

.contact a {
	color: #000;
}

.about {
	text-align: center;
}

.about p {
	text-align: left;
}

.about img{
	width: 250px;
	height: 250px;
	border-radius: 150px;
	-webkit-border-radius: 150px;
	-moz-border-radius: 150px;
}

.work img:hover {
	opacity: 0.5;
	-webkit-transition: 0.3s ease;
	-moz-transition: 0.3s ease;
	-ms-transition: 0.3s ease;
	-o-transition: 0.3s ease;
	transition: 0.3s ease;
}

.work li {
	height: 100%;
	overflow: hidden;
}

hr {
  border: 0;
  height: 1px;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
	opacity: 0.8;
}

footer {
	padding: 80px 0 10px 0;
}

footer a:hover {
	color: rgba(0, 0, 0, 0.4);
	background-color: transparent;
}

